
$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.13-2 (opened June 16, 2008)

	* merged 430: fix residual df in permutest.cca/anova.cca.

	* merged 428: scores.rda returns and summary.cca prints scaling
	constant in rda/capscale.

	* merged r425: scores.rda scaling=0 really returns unmodified
	scores like documented.

	* merged r427: summary for capscale result similar as for rda.

	* r437 simultaneously with pkg/: oecosimu p/a transforms data also
	for the original statistic.

Version 1.13-1 (released June 11, 2008)

	* adonis: speed-up and doc updates.

	* merged r400:405 -- should fix rank problems in cca/rda (cancels
	r396).

	* merged r396: cca/rda/capscale print issues a warning when rank
	of constraints+conditions < rank of dependent data, because vegan
	cannot handle these cases properly.

	* merged mso revisions since r372: now similar as in devel branch
	at r389. 

	* merged 371: mite.xy data.

	* merged 368: method name to taxa2dist
	
	* merged r365: workaround to failure of weights.default in R 2.7.0
	when object had no weights.

	* merged r369: fixes bug in calculation of pair-wise permutation
	p-values for some circumstances in 'permutest.betadisper'.

	* merged r381: passes ... to 'lines' in 'lines.spantree'.
	
Version 1.13-0 (released May 21, 2008) 

	* Branched version 1.12-15 (rev 354) for a new release.

	* MOStest: removed from the release version. It seemed to work
	correctly, but strangely: needs more research.
	
Version 1.12-15 (closed May 14, 2008)

	* capscale: prints info on possible metaMDS transformations, and
	uses metaMDSdist transformed data for getting species scores
	(similarly as metaMDS recently does).

	* ordiTerminfo: does not give superfluous warnings if constrained
	ordination called without constraints and without data=, like
	capscale(x ~ 1).

	* graphical functions: Graphical functions that also pass '...' to
	non-graphical functions (such as scores) now accept non-graphical