@@ -1,4 +1,5 @@
 
+	
 $Date$
 
 VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
@@ -17,6 +18,9 @@ Version 1.13-2 (opened June 16, 2008)
 
 	* r437 simultaneously with pkg/: oecosimu p/a transforms data also
 	for the original statistic.
+
+	* merged r448: bind moving only to labels (was canvas) in
+	orditkplot. 
 
 Version 1.13-1 (released June 11, 2008)
 
